--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:jlee3855@gatech.edu"}
   - {title: Github, icon: github, url: "https://github.com/jkunhee12/"}
-  - {title: Subscribe, icon: linkedin, url: "https://www.linkedin.com/in/joshua-lee-932287222/"}
+  - {title: LinkedIn, icon: linkedin, url: "https://www.linkedin.com/in/joshua-lee-932287222/"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
