--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,8 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.html"}
-  - {file: "README.md"}
+  - {title: About Me, file: "README.md"}
+  - {title: Resume, file: "Test.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:jlee3855@gatech.edu"}
